# AndroidAV

BiliRtmp/: local.properties  settings.gradle
BiliRtmp/app/: build.gradle
BiliRtmp/app/src/main/: AndroidManifest.xml
BiliRtmp/app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  CMakeLists.txt  JavaCallHelper.cpp  JavaCallHelper.h  VideoChannel.cpp  VideoChannel.h  native-lib.cpp
BiliRtmp/gradle/wrapper/: gradle-wrapper.properties
Camera2Use2/: settings.gradle
Camera2Use2/app/: build.gradle
Camera2Use2/gradle/wrapper/: gradle-wrapper.properties
DouYinSample/: build.gradle
DouYinSample/app/: build.gradle
DouYinSample/gradle/wrapper/: gradle-wrapper.properties
FFmpegPlayer/app/: build.gradle
FFmpegPlayer/gradle/wrapper/: gradle-wrapper.properties
HelloWD/: settings.gradle
HelloWD/app/: build.gradle
HelloWD/gradle/wrapper/: gradle-wrapper.properties
HelloWorld/: build.gradle
HelloWorld/app/: build.gradle
HelloWorld/gradle/wrapper/: gradle-wrapper.properties
MMKV/: local.properties
MMKV/app/: build.gradle
MMKV/gradle/wrapper/: gradle-wrapper.properties
MMKV2/: local.properties  settings.gradle
MMKV2/app/: build.gradle
MMKV2/gradle/wrapper/: gradle-wrapper.properties
MusicClip1/app/: build.gradle
MusicClip1/gradle/wrapper/: gradle-wrapper.properties
MusicClip2/: mix.pcm  settings.gradle
MusicPlayer/app/: build.gradle
MusicPlayer/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
MusicPlayer/gradle/wrapper/: gradle-wrapper.properties
MusicPlayer2/app/: build.gradle
MusicPlayer2/gradle/wrapper/: gradle-wrapper.properties
MusicPlayer3/: settings.gradle
MusicPlayer3/app/: build.gradle
MusicPlayer4/app/src/main/cpp/: CMakeLists.txt  MNAudio.cpp  MNAudio.h  MNCallJava.cpp  MNFFmpeg.cpp  MNFFmpeg.h  MNPlaystatus.h  MNQueue.h  native-lib.cpp
OpenglFilter/: local.properties  settings.gradle
OpenglFilter/app/: build.gradle
OpenglFilter/gradle/wrapper/: gradle-wrapper.properties
OpenglFilter2/: local.properties  settings.gradle
OpenglFilter2/app/: build.gradle
OpenglFilter2/gradle/wrapper/: gradle-wrapper.properties
RtmpBiliBili/: local.properties  settings.gradle
RtmpBiliBili/app/: build.gradle
Test/app/: build.gradle
VideoAdd/: settings.gradle
VideoAdd/app/: build.gradle
WDFace/: local.properties  settings.gradle
WDFace/app/: build.gradle
WebrtcRoom/: settings.gradle
WebrtcRoom/app/: build.gradle
cameraopengldemo/: local.properties  settings.gradle
cameraopengldemo/app/: build.gradle
(+226 files in other folders)
